# TextJpn

./: ChangeLog.md  LICENSE  README.md  TextJpn.cabal  functions.hs  hiragana.hs  kana.hs  katakana.hs
src/: functions.hs  kana.hs  katakana.hs  romajiScheme.hs  shinni'shiki-ro:maji.hs
src/romanization/: shinni'shiki-ro:maji.hs
