-- TextJpn.cabal

name:                TextJpn
version:             0.1.0.0
synopsis:            A haskell library to support Japanese kana as a datatype, functions on kana, and romanization schemes
-- description:
homepage:            https://github.com/andrewjunyoung/TextJpn
license:             MIT
license-file:        LICENSE
author:              Andrew Jun Young
maintainer:          andrew.young16@imperial.ac.uk
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
  -- hs-source-dirs:
  default-language:    Haskell2010
